Saving new entry 2024-08-01-02-02-49

--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -65,7 +65,7 @@ Let me unpack that script a little:
 
 1. First we get a reference to the virtual MIDI device that we created using loopMIDI by the venerable Tobias Erichsen.
 1. Then we get a reference to the "Human Input Device" that my rudder pedals are registered as. USB is kind of bizarre in that every. single. USB. device. has to have its own vendor ID and product ID, and those **must** be registered with the USB consortium. I'm pretty sure that's a racket, but I can't prove it, so we'll leave it at that. VKB Sim's vendor id is 8989 and the product id is 287 so just because I want to write as little code as possible we add those and check if their sum is 9276.
-1. Then we map the left and right pedals to [sostenuto](https://en.wikipedia.org/wiki/Piano_pedals#Sostenuto_pedal) ("only hold the notes that are currently down") and [sustain](https://en.wikipedia.org/wiki/Sustain_pedal) ("don't dampen every note being played") respectively: the rudder pedals register values 0 through 1020 for the left pedal being down, and 1020 through 2040 for the right pedal being down, so we just map those values to the MIDI value range 0 through 127.
+1. Then we map the left and right pedals to [sostenuto](https://en.wikipedia.org/wiki/Piano_pedals#Sostenuto_pedal) ("only hold the notes that are currently down") and [sustain](https://en.wikipedia.org/wiki/Sustain_pedal) ("don't dampen any note being played") respectively: the rudder pedals register values 0 through 1020 for the left pedal being down, and 1020 through 2040 for the right pedal being down, so we just map those values to the MIDI value range 0 through 127.
 1. We then send the mapped value with either CC66 for sostenuto or CC64 for sustain, on MIDI channel 1. But only when the value isn't 1020, which is the value it'll be when I'm not pressing on either pedal. 
 
 And... uh... that's it?  We can just run this with `node pedals` and done: as long as we enable the "Rudder Sustain" MIDI input  in whatever DAW or standalone instrument we're using, those flight sim pedals are now MIDI pedals. 
