--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -45,14 +45,15 @@ const rudder = HID.devices().find(({ [v]: a, [p]: b }) => a + b === 9276);
 const device = await HID.HIDAsync.open(rudder[v], rudder[p]);
 
 // And start mapping data!
-const MIDPOINT = 1020;
-let controller, value, max;
+const MIDPOINT = 1024;
+let controller, value, previous, max;
 device.on("data", (data) => {
   // convert the controller bytes to a numeric value
-  const v = data[14] * 255 + data[13];
-  if (v !== MIDPOINT) {
+  const v = data[14] * 256 + data[13];
+  if (v !== MIDPOINT && v !== previous) {
+    previous = v;
     controller = v < MIDPOINT ? 66 : 64;
-    max = v < MIDPOINT ? 0 : 2040;
+    max = v < MIDPOINT ? 0 : 2047;
     value = map(v, MIDPOINT, max, 0, 127);
     out.send("cc", { channel: 1, controller, value });
   }
