--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -39,10 +39,7 @@ const map = (v, a, b, c, d) => (c + ((v - a) * (d - c)) / (b - a)) | 0;
 const out = new easymidi.Output("Rudder Sustain", process.platform !== "win32");
 
 // Get our VKB-sim rudder
-const v = `vendorId`;
-const p = `productId`;
-const rudder = HID.devices().find(({ [v]: a, [p]: b }) => a + b === 9276);
-const device = await HID.HIDAsync.open(rudder[v], rudder[p]);
+const device = await HID.HIDAsync.open(8989, 287);
 
 // And start mapping data!
 const MIDPOINT = 1024;
@@ -50,12 +47,16 @@ let controller, value, previous, max;
 device.on("data", (data) => {
   // convert the controller bytes to a numeric value
   const v = data[14] * 256 + data[13];
-  if (v !== MIDPOINT && v !== previous) {
+  if (v !== previous) {
     previous = v;
-    controller = v < MIDPOINT ? 66 : 64;
-    max = v < MIDPOINT ? 0 : 2047;
-    value = map(v, MIDPOINT, max, 0, 127);
-    out.send("cc", { channel: 1, controller, value });
+    if (v <= MIDPOINT) {
+      value = map(v, MIDPOINT, 0, 0, 127);
+      out.send("cc", { channel: 1, controller: 66, value });
+    }
+    if (v >= MIDPOINT) {
+      value = map(v, MIDPOINT, 2047, 0, 127);
+      out.send("cc", { channel: 1, controller: 64, value });
+    }
   }
 });
 
@@ -64,10 +65,10 @@ console.log(`\nSustain mapper running. Press ctrl-c to exit.\n\n`);
 
 Let me unpack that script a little:
 
-1. First we get a reference to the virtual MIDI device that we created using loopMIDI by the venerable Tobias Erichsen.
-1. Then we get a reference to the "Human Input Device" that my rudder pedals are registered as. USB is kind of bizarre in that every. single. USB. device. has to have its own vendor ID and product ID, and those **must** be registered with the USB consortium. I'm pretty sure that's a racket, but I can't prove it, so we'll leave it at that. VKB Sim's vendor id is 8989 and the product id is 287 so just because I want to write as little code as possible we add those and check if their sum is 9276.
-1. Then we map the left and right pedals to [sostenuto](https://en.wikipedia.org/wiki/Piano_pedals#Sostenuto_pedal) ("only hold the notes that are currently down") and [sustain](https://en.wikipedia.org/wiki/Sustain_pedal) ("don't dampen any note being played") respectively: the rudder pedals register values 0 through 1020 for the left pedal being down, and 1020 through 2040 for the right pedal being down, so we just map those values to the MIDI value range 0 through 127.
-1. We then send the mapped value with either CC66 for sostenuto or CC64 for sustain, on MIDI channel 1. But only when the value isn't 1020, which is the value it'll be when I'm not pressing on either pedal. 
+1. First we get a reference to the virtual MIDI device that we created using loopMIDI by the venerable Tobias Erichsen. The platform check is a bit silly, but the easymidi library itself doesn't perform Windows detection, so it wants "true" for linuxy systems and something falsey for Windows.
+1. Then we get a reference to the "Human Input Device" that my rudder pedals are registered as. USB is kind of bizarre in that every. single. USB. device. has to have its own vendor ID and product ID, and those **must** be registered with the USB consortium. I'm pretty sure that's a racket, but I can't prove it, so we'll leave it at that. VKB Sim's vendor id is 8989 and the product id is 287, and I only have one so it's a straight "get the only instance of this device" call.
+1. Then we map the left and right pedals to [sostenuto](https://en.wikipedia.org/wiki/Piano_pedals#Sostenuto_pedal) ("only hold the notes that are currently down") and [sustain](https://en.wikipedia.org/wiki/Sustain_pedal) ("don't dampen any note being played") respectively: the rudder pedals can generate values from 0 to 2047,  generating 0 through 1023 when the left pedal being down, and 1025 through 2047 when the right pedal is down, with 1024 being the neutral position. So we just can fairly trivially map both ranges to the MIDI value range 0 through 127.
+1. We then send the mapped value with either CC66 for sostenuto or CC64 for sustain, on MIDI channel 1. With a small bit of overhead so we don't emit the same value twice.
 
 And... uh... that's it?  We can just run this with `node pedals` and done: as long as we enable the "Rudder Sustain" MIDI input  in whatever DAW or standalone instrument we're using, those flight sim pedals are now MIDI pedals. 
 
