Saving new entry 2024-08-01-02-02-49

--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -24,7 +24,7 @@ A JACK-only linux suggestion? I like where your head's at, except I'm on Windows
 
 > "Fine, smartass, so: what, you gonna code your own solution??"
 
-Actually, as it turns out... yeah? I can write a universal solution that'll work for anything that can deal with more than one MIDI device (which is everything) in like... 30 lines of code, if I'm willing to use [Node.js](https://nodejs.org/en) and LoopMIDI, [a utility that I already use](https://www.tobias-erichsen.de/software/loopmidi.html)?
+Actually, as it turns out... yeah? I can write a universal solution that'll work for anything that can deal with more than one MIDI device (which is everything) in like... 25 lines of code, if I'm willing to use [Node.js](https://nodejs.org/en) and LoopMIDI, [a utility that I already use](https://www.tobias-erichsen.de/software/loopmidi.html)?
 
 Step 1: create a virtual MIDI device called "Rudder Sustain". Inspired name, I know: I'm a programmer, we're fantastic at naming things.
 
@@ -33,7 +33,7 @@ Step 2: write some code: `npm install node-hid easymidi`, and then something tha
 ```
 import HID from "node-hid";
 import easymidi from "easymidi";
-const map = (v, a, b, c, d) => (c + ((v - a) * (d - c)) / (b - a)) | 0;
+const { abs, round } = Math;
 
 // Get our virtual MIDI device
 const out = new easymidi.Output("Rudder Sustain", process.platform !== "win32");
@@ -43,20 +43,15 @@ const device = await HID.HIDAsync.open(8989, 287);
 
 // And start mapping data!
 const MIDPOINT = 1024;
-let controller, value, previous, max;
+const scale = 127 / MIDPOINT;
+let value, previous;
 device.on("data", (data) => {
-  // convert the controller bytes to a numeric value
   const v = data[14] * 256 + data[13];
   if (v !== previous) {
     previous = v;
-    if (v <= MIDPOINT) {
-      value = map(v, MIDPOINT, 0, 0, 127);
-      out.send("cc", { channel: 1, controller: 66, value });
-    }
-    if (v >= MIDPOINT) {
-      value = map(v, MIDPOINT, 2047, 0, 127);
-      out.send("cc", { channel: 1, controller: 64, value });
-    }
+    value = round(abs((v - 1024) * scale));
+    if (v <= MIDPOINT) out.send("cc", { channel: 1, controller: 66, value });
+    if (v >= MIDPOINT) out.send("cc", { channel: 1, controller: 64, value });
   }
 });
 
@@ -67,11 +62,11 @@ Let me unpack that script a little:
 
 1. First we get a reference to the virtual MIDI device that we created using loopMIDI by the venerable Tobias Erichsen. The platform check is a bit silly, but the easymidi library itself doesn't perform Windows detection, so it wants "true" for linuxy systems and something falsey for Windows.
 1. Then we get a reference to the "Human Input Device" that my rudder pedals are registered as. USB is kind of bizarre in that every. single. USB. device. has to have its own vendor ID and product ID, and those **must** be registered with the USB consortium. I'm pretty sure that's a racket, but I can't prove it, so we'll leave it at that. VKB Sim's vendor id is 8989 and the product id is 287, and I only have one so it's a straight "get the only instance of this device" call.
-1. Then we map the left and right pedals to [sostenuto](https://en.wikipedia.org/wiki/Piano_pedals#Sostenuto_pedal) ("only hold the notes that are currently down") and [sustain](https://en.wikipedia.org/wiki/Sustain_pedal) ("don't dampen any note being played") respectively: the rudder pedals can generate values from 0 to 2047,  generating 0 through 1023 when the left pedal being down, and 1025 through 2047 when the right pedal is down, with 1024 being the neutral position. So we just can fairly trivially map both ranges to the MIDI value range 0 through 127.
-1. We then send the mapped value with either CC66 for sostenuto or CC64 for sustain, on MIDI channel 1. With a small bit of overhead so we don't emit the same value twice.
+1. Then we map the left and right pedals to [sostenuto](https://en.wikipedia.org/wiki/Piano_pedals#Sostenuto_pedal) ("only hold the notes that are currently down") and [sustain](https://en.wikipedia.org/wiki/Sustain_pedal) ("don't dampen any note") respectively: the rudder pedals generate values from 0 (left pedal down) to 2047 (right pedal down) with the neutral position generating 1024. so we just can fairly trivially map both ranges to the MIDI value range 0 through 127.
+1. We then send the mapped value with either CC66 for sostenuto or CC64 for sustain (or both, if the pedals return to neutral), on MIDI channel 1. With a small bit of overhead to make sure we don't send duplicate values.
 
 And... uh... that's it?  We can just run this with `node pedals` and done: as long as we enable the "Rudder Sustain" MIDI input  in whatever DAW or standalone instrument we're using, those flight sim pedals are now MIDI pedals. 
 
-In less than 30 lines of code including vanity comments and console logs.
+In 25 lines of code including comments and console logs.
 
 Programming is a superpower.
