Saving new entry 2024-08-01-02-02-49

--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -22,13 +22,15 @@ Look, I own something like ten DAWs ([Ableton](https://www.ableton.com/en/), [Bi
 
 A JACK-only linux suggestion? I like where your head's at, except I'm on Windows so that's not going to help us much here.
 
-> "Fine, smartass, so: what, you gonna code your own solution??"
+> "Okay, fine. So: what, you're gonna write your own program??"
 
-Actually, as it turns out... yeah? I can write a universal solution that'll work for anything that can deal with more than one MIDI device (which is everything) in like... 25 lines of code, if I'm willing to use [Node.js](https://nodejs.org/en) and LoopMIDI, [a utility that I already use](https://www.tobias-erichsen.de/software/loopmidi.html)?
+Actually, after a bit of digging... yeah? I can write a universal solution that'll work for anything that can deal with more than one MIDI device (which is all commercial software and nearly-all freeware) in 25 lines of code, if I'm willing to use [Node.js](https://nodejs.org/en) and a virtual midi device manager like [LoopMIDI](https://www.tobias-erichsen.de/software/loopmidi.html), a utility that I already use anyway. 
 
-Step 1: create a virtual MIDI device called "Rudder Sustain". Inspired name, I know: I'm a programmer, we're fantastic at naming things.
+Step 1: Let me create a virtual MIDI device in LoopMIDI called "Rudder Sustain" for this. Inspired name, I know: I'm a programmer, we're fantastic at naming things.
 
-Step 2: write some code: `npm install node-hid easymidi`, and then something that's a near-trivial `pedals.js` file:
+Step 2: Install the Node libraries for working with USB devices and MIDI: `npm install node-hid easymidi`.
+
+Step 3: Write a near-trivial `pedals.js` file:
 
 ```
 import HID from "node-hid";
@@ -45,8 +47,8 @@ const device = await HID.HIDAsync.open(8989, 287);
 const MIDPOINT = 1024;
 const scale = 127 / MIDPOINT;
 let value, previous;
-device.on("data", (data) => {
-  const v = data[14] * 256 + data[13];
+device.on("data", (bytes) => {
+  const v = bytes[13] + bytes[14] * 256;
   if (v !== previous) {
     previous = v;
     value = round(abs((v - 1024) * scale));
@@ -63,7 +65,7 @@ Let me unpack that script a little:
 1. First we get a reference to the virtual MIDI device that we created using loopMIDI by the venerable Tobias Erichsen. The platform check is a bit silly, but the easymidi library itself doesn't perform Windows detection, so it wants "true" for linuxy systems and something falsey for Windows.
 1. Then we get a reference to the "Human Input Device" that my rudder pedals are registered as. USB is kind of bizarre in that every. single. USB. device. has to have its own vendor ID and product ID, and those **must** be registered with the USB consortium. I'm pretty sure that's a racket, but I can't prove it, so we'll leave it at that. VKB Sim's vendor id is 8989 and the product id is 287, and I only have one so it's a straight "get the only instance of this device" call.
 1. Then we map the left and right pedals to [sostenuto](https://en.wikipedia.org/wiki/Piano_pedals#Sostenuto_pedal) ("only hold the notes that are currently down") and [sustain](https://en.wikipedia.org/wiki/Sustain_pedal) ("don't dampen any note") respectively: the rudder pedals generate values from 0 (left pedal down) to 2047 (right pedal down) with the neutral position generating 1024. so we just can fairly trivially map both ranges to the MIDI value range 0 through 127.
-1. We then send the mapped value with either CC66 for sostenuto or CC64 for sustain (or both, if the pedals return to neutral), on MIDI channel 1. With a small bit of overhead to make sure we don't send duplicate values.
+1. We then send the mapped value with either controller code 66 for sostenuto or controller code 64 for sustain (or both, if the pedals return to neutral), on MIDI channel 1. With a small bit of overhead to make sure we don't send duplicate values.
 
 And... uh... that's it?  We can just run this with `node pedals` and done: as long as we enable the "Rudder Sustain" MIDI input  in whatever DAW or standalone instrument we're using, those flight sim pedals are now MIDI pedals. 
 
