Saving post data

--- a/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
+++ b/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
@@ -25,3 +25,5 @@ But now I do, and it's frankly a bit of a shit experience, but it works, and it'
 1. use the `requests` based API, where you write http verbs and enpoint URLs. E.g. `await octokit.request(`GET /repos/${user}/${repo}/actions/runs`)`,
 1. use the rest API extension, so you can write `await octokit.repos(user, repo).actions.runs()`, or
 1. use a plugin if there is one for the exact thing you want, like "uploading a text file without manually running every git step", e.g. `    await octokit.createOrUpdateTextFile({ owner, repo, branch, path: `${this.path}/rss.xml`, content: rss, message: `Update to RSS` });`
+
+For most of this blog's work, the latter is perfectly adequate (although I do [wish it supported createOrUpdateTextFiles`, plural]())
