Saving post data

--- a/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
+++ b/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
@@ -26,4 +26,32 @@ But now I do, and it's frankly a bit of a shit experience, but it works, and it'
 1. use the rest API extension, so you can write `await octokit.repos(user, repo).actions.runs()`, or
 1. use a plugin if there is one for the exact thing you want, like "uploading a text file without manually running every git step", e.g. `    await octokit.createOrUpdateTextFile({ owner, repo, branch, path: `${this.path}/rss.xml`, content: rss, message: `Update to RSS` });`
 
-For most of this blog's work, the latter is perfectly adequate (although I do [wish it supported createOrUpdateTextFiles`, plural]())
+For most of this blog's work, the latter is perfectly adequate (although I do [wish it supported createOrUpdateTextFiles`, plural](https://github.com/octokit/plugin-create-or-update-text-file.js/issues/295#issuecomment-2408704495)), so the client-side code simply figures out which files need to be written with what content, and sends those off as commits. Then it uses option 1 to poll the `actions` endpoint to see if the gh pages deploy (which github automatically kicks off without a workflow file - handy!) has finished yet, and colours the admin button red to let you know others won't see your content yet because the website's still rebuilding.
+
+#### "how does it authenticate?"
+
+Auth uses a fine-grained GH token. Another thing that didn't exist back in 2014: you could generate a token and give that commit write access, and good news you just allowed that for every single repo you had access to. It was... insane? It took Github way too long to finally add normal tokens that let you specify exactly which repo(s) it should apply to, but now that we have those: 
+
+1. you click the admin button
+1. you fill in your username, repo name, gh-pages branch, the subdir your gh-weblog content should live in, and that token
+1. you are now authenticated and you can use the admin interface. 
+
+And note that that works regardless of whether the token is valid or not: if it's not, nothing you do will actually get saved but you're free to dick around in the admin "interface": it's an open source blog, what are you going to do, discover that it's actually markdown?
+
+### RSS
+
+It's a blog, it should have RSS. The blog simply grabs the most recent 10 entries, and wraps that in RSS 2.0 XML markup, then sends that off to Github as a regular text file, because it is. Nothing super special there, and because it's just "more gh-pages content" there's nothing else to do. Once the site's redeployed, everyone's RSS feed readers will see the update(s).
+
+### mod_rewrite
+
+Since everything's done through a client-side library, there's a bit of a problem when it comes to "showing a single blog post". Obviously if you want the post feed you just to https://pomax.github.io, but if you want to see, say, this specific post, you can visit https://pomax.github.io/pages/1728925663194/updating-my-blog-platform and that works. Even though it's actually still using https://pomax.github.io with a `?postid=1728925663194/` query argument.
+
+The way this works is that the blog library literally writes a file called `./pages/1728925663194/updating-my-blog-platform/index.html` into the repo to handle the redirect. Here's what's in it:
+
+```html
+<meta http-equiv="refresh" content="0; url=../../../index.html?postid=1728925663194">
+```
+
+That's it. HTML-based mod_rewrite. Sure, it's more files on the repo, but they're organized extremely obviously, and the blog platform will clean them up if you delete posts, so you click a post link, your browser simply loads a _real html index file_, sees the redirect, and instantly loads the homepage again. 
+
+And then the homepage sees it's supposed to load a single post, runs a `history.replaceState` to make the URL look like the one you actually clicked (which, remember, is a _real URL_ with a real file at that URL) and everything works as you expect.
