Saving post data

--- a/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
+++ b/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
@@ -55,3 +55,16 @@ The way this works is that the blog library literally writes a file called `./pa
 That's it. HTML-based mod_rewrite. Sure, it's more files on the repo, but they're organized extremely obviously, and the blog platform will clean them up if you delete posts, so you click a post link, your browser simply loads a _real html index file_, sees the redirect, and instantly loads the homepage again. 
 
 And then the homepage sees it's supposed to load a single post, runs a `history.replaceState` to make the URL look like the one you actually clicked (which, remember, is a _real URL_ with a real file at that URL) and everything works as you expect.
+
+### image uploads
+
+The one thing I've not re-uplifted is image drag-and-drop so that I can just drag images into my blog posts as I'm writing them. It's not a ton of work, but it's also not trivial, as there are no convenience plugins available for that, so to upload an image "on drop", you need to :
+
+1. create a blob on github
+1. get the blob sha
+1. create a commit tree for that blob
+1. create a commit to put that commit tree into
+1. update the head ref to point to that commit
+1. then drop the blob sha into the markdown as image code.
+
+Everything in that list is entirely doable but also the kind of pain I'd rather do "in follow-up" compared to holding the new platform deployment.
