Saving post data

--- a/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
+++ b/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
@@ -46,7 +46,7 @@ It's a blog, it should have RSS. The blog simply grabs the most recent 10 entrie
 
 Since everything's done through a client-side library, there's a bit of a problem when it comes to "showing a single blog post". Obviously if you want the post feed you just to https://pomax.github.io, but if you want to see, say, this specific post, you can visit https://pomax.github.io/pages/1728925663194/updating-my-blog-platform and that works. Even though it's actually still using https://pomax.github.io with a `?postid=1728925663194/` query argument.
 
-The way this works is that the blog library literally writes a file called `./pages/1728925663194/updating-my-blog-platform/index.html` into the repo to handle the redirect. Here's what's in it:
+The way this works is that the blog library literally writes [a file called `./pages/1728925663194/updating-my-blog-platform/index.html`](https://github.com/Pomax/pomax.github.io/blob/main/pages/1728925663194/updating-my-blog-platform/index.html) into the repo to handle the redirect. Here's what's in it:
 
 ```html
 <meta http-equiv="refresh" content="0; url=../../../index.html?postid=1728925663194">
