--- a/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
+++ b/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
@@ -1,5 +1,7 @@
 # Updating my blog platform
 
+# Updating my blog platform
+
 I updated my blog platform, for reasons. One of them being the current Wordpress shenanigans,  causing the most important person in my life to go "...didn't you have a github-hosted blog? Is that something I can use too?" and while her eventual solution was to discover that I have a Dreamhost account that comes with a free hosted self-managed WP install (so she can stop funding Automaticc), I spent a bunch of time trying to clean up my blog code so it could be used by others again. 
 
 I originally wrote it back in 2014 back when React was still on version 0.12, and revisiting the code it's incredible to see how much nicer React was back then, compared to the monster it has become since. So I decided to rewrite it, but keep it React 0.12, and honest, I wish there was a modern "classic React" library, but JS doesn't stop working this should keep working forever just fine. 
@@ -30,7 +32,7 @@ For most of this blog's work, the latter is perfectly adequate (although I do [w
 
 #### "how does it authenticate?"
 
-Auth uses a fine-grained GH token. Another thing that didn't exist back in 2014: you could generate a token and give that commit write access, and good news you just allowed that for every single repo you had access to. It was... insane? It took Github way too long to finally add normal tokens that let you specify exactly which repo(s) it should apply to, but now that we have those: 
+Auth uses a fine-grained GH token. Another thing that didn't exist back in 2014: you could generate a token and give that commit write access, and good news you just allowed that for every single repo you had access to. It was... insane? It took Github way too long to finally add normal tokens that let you specify exactly which repo(s) it should apply to, but [now that we have those](https://github.com/settings/tokens?type=beta): 
 
 1. you click the admin button
 1. you fill in your username, repo name, gh-pages branch, the subdir your gh-weblog content should live in, and that token
@@ -46,7 +48,7 @@ It's a blog, it should have RSS. The blog simply grabs the most recent 10 entrie
 
 Since everything's done through a client-side library, there's a bit of a problem when it comes to "showing a single blog post". Obviously if you want the post feed you just to https://pomax.github.io, but if you want to see, say, this specific post, you can visit https://pomax.github.io/pages/1728925663194/updating-my-blog-platform and that works. Even though it's actually still using https://pomax.github.io with a `?postid=1728925663194/` query argument.
 
-The way this works is that the blog library literally writes [a file called `./pages/1728925663194/updating-my-blog-platform/index.html`](https://github.com/Pomax/pomax.github.io/blob/main/pages/1728925663194/updating-my-blog-platform/index.html) into the repo to handle the redirect. Here's what's in it:
+The way this works is that the blog library literally writes a file called `./pages/1728925663194/updating-my-blog-platform/index.html` into the repo to handle the redirect. Here's what's in it:
 
 ```html
 <meta http-equiv="refresh" content="0; url=../../../index.html?postid=1728925663194">
