Saving post data

--- a/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
+++ b/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
@@ -38,7 +38,7 @@ Auth uses a fine-grained GH token. Another thing that didn't exist back in 2014:
 1. you fill in your username, repo name, gh-pages branch, the subdir your gh-weblog content should live in, and that token
 1. you are now authenticated and you can use the admin interface. 
 
-And note that that works regardless of whether the token is valid or not: if it's not, nothing you do will actually get saved but you're free to dick around in the admin "interface": it's an open source blog, what are you going to do, discover that it's actually markdown?
+And note that that works regardless of whether the token is valid or not: if it's not, nothing you do will actually get saved but you're free to dick around in the admin "interface": it's [an open source blog](https://github.com/pomax/pomax.github.io), what are you going to do, discover that it's actually markdown?
 
 ### RSS
 
