old image link fix

--- a/gh-weblog/content/posts/markdown/2014-04-05-05-09-09.md
+++ b/gh-weblog/content/posts/markdown/2014-04-05-05-09-09.md
@@ -4,11 +4,11 @@ Turns out that the tool I was looking for is [High-Logic's FontCreator](http://w
 
 That means that I've been able to go from this:
 
-<img src="/gh-weblog-2/images/sheet.jpg" alt="a sheet of letters">
+<img src="/gh-weblog/images/sheet.jpg" alt="a sheet of letters">
 
 to this:
 
-<img src="/gh-weblog-2/images/prototype-font.jpg" alt="a functioning font based on the sheet">
+<img src="/gh-weblog/images/prototype-font.jpg" alt="a functioning font based on the sheet">
 
 in about an hour. That's a [picture of a webpage](http://pomax.github.io/Cursive-swash-typeface), by the way. Yeah, webfonts are the best thing since "system fonts".
 
