--- a/gh-weblog/content/posts/markdown/2015-05-05-20-18-08.md
+++ b/gh-weblog/content/posts/markdown/2015-05-05-20-18-08.md
@@ -6,17 +6,17 @@ Now, if you've never heard of a flight computer you might think it's some kind o
 
 My flight computer just looks a little fancier than the one you'd be familiar with if you fly planes (or have ever seen a flight computer before):
 
-<img src="/gh-weblog-2/images/sna411.jpg" class="border">
+<img src="/gh-weblog/images/sna411.jpg" class="border">
 
 You can see the flight computer part of it pretty much all over the face and dial:
 
-<img src="/gh-weblog-2/images/sna411-close.jpg" class="border">
+<img src="/gh-weblog/images/sna411-close.jpg" class="border">
 
 Holy crap that's a lot of things! And half the fun is figuring out [how to do the million computations](https://www.youtube.com/watch?v=Y7ZlWKeA_c8) this relatively simple (but sturdy) piece of metal will let me do.
 
 But, why would I buy this watch at all? Why not just install some apps on my phone? Allow me to explain by showing you a picture of [my phone](https://en.wikipedia.org/wiki/Nokia_N900):
 
-<img src="/gh-weblog-2/images/phone.jpg" class="border">
+<img src="/gh-weblog/images/phone.jpg" class="border">
 
 My phone is for making phone calls, sending text messages, and waking me up in the morning.
 
